--- a/styles.css
+++ b/styles.css
@@ -435,7 +435,7 @@
     
   } */
    
-  @media screen and (max-width: 1028px) {
+  @media screen and (max-width: 1034px) {
 
     .section {
       margin: 2%;
@@ -489,6 +489,7 @@
       width: 98%;
       padding-left: 0px;
       padding-right: 0px;
+      margin-right: 2%;
       
        
     }
@@ -519,6 +520,8 @@
      /*  margin-right: 20px; */
       border-radius: 10px;
       width: 98%;
+      margin-left: 0%;
+      margin-right: 2%;
      
     }
     .bloc1 {
@@ -553,10 +556,14 @@
         width: 90%;
       }
       .Activites {
-        margin-right: 0%;
-        margin-left: 0%;
+        margin-right: 1%;
+        margin-left: 1%;
         width: 98%;
         
+    }
+    .margMobileActivités{
+      margin-left: 20px;
+
     }
     .footer {
       width: 100%;
